change background color of footer

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -15,7 +15,7 @@
 
         <!-- Contenido -->
         <section>  
-			<b>Libros</b>
+			<b>LibrosESTE ES EL CAMBIO</b>
             <p>l1, l2 l3</p>
 		</section> 
 		
